--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameInstanceClass=/Script/DCJ2024.DungeonCrawlerGameInstance
+GlobalDefaultGameMode=/Game/GameData/DungeonCrawlerGameMode.DungeonCrawlerGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
