--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/L_GridTesting.L_GridTesting
 GameInstanceClass=/Script/DCJ2024.DungeonCrawlerGameInstance
 GlobalDefaultGameMode=/Game/GameData/DungeonCrawlerGameMode.DungeonCrawlerGameMode_C
+EditorStartupMap=/Game/Maps/L_GridTesting.L_GridTesting
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
