--- a/DCJ2024.uproject
+++ b/DCJ2024.uproject
@@ -48,6 +48,10 @@
 		{
 			"Name": "Soundscape",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayMessageRouter",
+			"Enabled": true
 		}
 	]
 }
