--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,4 +9,9 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Audio/AxData/DT_AudioTags.DT_AudioTags
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="GPM.Interact.Chest",DevComment="")
++GameplayTagList=(Tag="GPM.UI.HUD.Close",DevComment="")
++GameplayTagList=(Tag="GPM.UI.HUD.Open",DevComment="")
++GameplayTagList=(Tag="GPM.UI.MainMenu.Close",DevComment="")
++GameplayTagList=(Tag="GPM.UI.MainMenu.Open",DevComment="")
 
