Chest Audio Redo
Got lost in the last push and redoing it now

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,9 +7,11 @@ AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Audio/AxData/DT_AudioTags.DT_AudioTags
++GameplayTagRedirects=(OldTagName="GPM.Interact.Chest",NewTagName="GPM.Interact.ChestButtonPress")
++GameplayTagRedirects=(OldTagName="GPM.Interact.ChestButtonPress",NewTagName="GPM.Interact.Chest.ButtonPress")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="GPM.Interact.Chest",DevComment="")
++GameplayTagList=(Tag="GPM.Interact.Chest.RewardType",DevComment="")
 +GameplayTagList=(Tag="GPM.UI.HUD.Close",DevComment="")
 +GameplayTagList=(Tag="GPM.UI.HUD.Open",DevComment="")
 +GameplayTagList=(Tag="GPM.UI.MainMenu.Close",DevComment="")
