--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -20,3 +20,7 @@ LOD3ColorPointHashWidth=10000.000000
 ActiveColorPointHashWidth=500.000000
 ActiveColorPointHashUpdateTimeSeconds=1.000000
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
